[gd_scene load_steps=17 format=4 uid="uid://d2f2xqycilnoh"]

[ext_resource type="Script" path="res://luke/scripts_luke/stick_throw.gd" id="1_bc3on"]
[ext_resource type="AudioStream" uid="uid://djdwb418nkwlr" path="res://luke/assets_luke/audio_luke/stick_fall_forest.mp3" id="2_o0lkw"]
[ext_resource type="Material" uid="uid://dpnir2tq175wl" path="res://assets/log_1.tres" id="3_eqvu3"]
[ext_resource type="Material" uid="uid://rj4exg2fmkn6" path="res://assets/materials/stick_2.tres" id="4_owufi"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yyxl3"]
albedo_color = Color(0.42, 0.1722, 0.1722, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_k6x6n"]
material = SubResource("StandardMaterial3D_yyxl3")

[sub_resource type="CylinderShape3D" id="CylinderShape3D_hj2go"]
height = 0.445
radius = 0.09

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tfjwx"]

[sub_resource type="ArrayMesh" id="ArrayMesh_qjl7b"]
_surfaces = [{
"aabb": AABB(-1.52462, -13.4093, -0.79778, 2.73177, 27.0841, 1.46214),
"format": 34896613377,
"index_count": 228,
"index_data": PackedByteArray("AgAGAAEAAgAHAAYAAAAJAAQAAAAFAAkAAwAHAAIAAwAIAAcAAQAFAAAAAQAGAAUABAAIAAMABAAJAAgACQANAAgACQAOAA0ABwALAAYABwAMAAsABQAOAAkABQAKAA4ACAAMAAcACAANAAwABgAKAAUABgALAAoACgATAA4ACgAPABMADQARAAwADQASABEACwAPAAoACwAQAA8ADgASAA0ADgATABIADAAQAAsADAARABAAEwAXABIAEwAYABcAEQAVABAAEQAWABUADwAYABMADwAUABgAEgAWABEAEgAXABYAEAAUAA8AEAAVABQAFAAdABgAFAAZAB0AFwAbABYAFwAcABsAFQAZABQAFQAaABkAGAAcABcAGAAdABwAFgAaABUAFgAbABoAJwAhACYAJwAiACEAJgAgACUAJgAhACAAGwAkABoAGwAlACQAGQAnAB0AGQAjACcAHAAlABsAHAAmACUAGgAjABkAGgAkACMAHQAmABwAHQAnACYAIwAiACcAIwAeACIAIwAfAB4AIwAkAB8AJQAfACQAJQAgAB8AAAACAAEAAgAEAAMAAgAAAAQAIAAeAB8AHgAhACIAHgAgACEA"),
"lods": [0.495573, PackedByteArray("AgAGAAEAAgAHAAYABwAMAAYADAAVAAYADAARABUAEQAkABUAEQAlACQABAAFAAkABAAJAAgADwATAAkABQAPAAkAEwAmABcAJwAiACYAEwAnACYADwAUABMAFAAnABMAFAAZACcAIwAiACcAGQAjACcAJAAjABkAFQAkABkAFQAZABQAFQAUAA8ABgAVAA8AAQAGAAUABgAPAAUAAQAFAAQAAwAHAAIAAwAIAAcACAASAAwAEgAXABEAEgARAAwACAAMAAcAFwAlABEAFwAmACUAJgAgACUABAAIAAMACQASAAgACQATABIAEwAXABIAJgAiACAAIwAfACIAIwAkAB8AJQAfACQAJQAgAB8ABAACAAEAAgAEAAMAHwAgACIA"), 1.08873, PackedByteArray("AgAGAAQAAgAHAAYABwARABUABAAGAAkABAAHAAIABAAJAAcACQASAAcABgAPAAkADwAjACcADwASAAkAEgARAAcAEgAlABEAEgAnACUABgAVAA8ABwAVAAYADwAnABIAIwAiACcAFQAjAA8AEQAlABUAFQAlACMAJwAiACUAJQAiACAAIwAlACIAJQAgACIA"), 1.59048, PackedByteArray("BAAlAAIAAgAlAAQABAAlACUAJQAiACUAJQAiACAAJQAgACIA")],
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 40,
"vertex_data": PackedByteArray("CEj+/wAAAAAAAP7/yGEAAIMb/v///wAAjXT+////AAARkP7/yGEAALZB89ooFwAANAeA2e9oAACNHQ7aQu0AAN9l2NtC7QAAOHxm3O9oAADAdA2q8AMAAHA5/ai4VQAAGFBlqQvaAABpmbaqC9oAABGwHqu4VQAAmsNGhcspAADukPmEsm4AAEmkFoUv3gAA7OJ1hS/eAABH9pKFsm4AAArRW2rmNAAAFqIHa0Z1AAAFtMZqcN0AAA/u8Wlw3QAA//+vaUZ1AADer6hNCDwAAPaGWU5VdAAAlpYVTm3PAAAmyTpNbc8AAMbY90xVdAAA08wqAbJPAACNrwAAaHoAALy6cQCEvwAA6t7iAYS/AAAZ6lQCaHoAAB9nfTIIPAAAAT1sMlV0AAAQTXEybc8AADiBiTJtzwAAU5GNMlV0AAA=")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_ussip"]
resource_name = "stick1_Circle_001"
_surfaces = [{
"aabb": AABB(-1.52462, -13.4093, -0.79778, 2.73177, 27.0841, 1.46214),
"attribute_data": PackedByteArray("mRojTPom/rAGHkBM4SQbrn8Qjkx6IW5MfSE1r+ITREx9IceyPRcdTOEk4bOIGqpadh0kW74RGVtdIARblhRoWpMXMlq1GsVtjR3UbfcRD25tIOJt5RThbdMXxm2UGld8EB1DfE4Ti3yJH3B8uxWWfCkYiHyeGt+G7RyxhrsT5IZDH9OGChYPh1MYGId/GmKSoxxvkk8UZ5LIHm6SYxZYkm4YVZIyGpiz4yOdrdQb4LNnIhmulBXhs3kd4bN9IdasIBeCs2cik6uqGGCz4yMOrKoaTZ7NHGie2BNonu0ebZ4UFkGeZRg3nn8Qjkx6IW5MPRcdTD0XHUyUFeGzeR3hs6oYYLOqGGCz2BNontgTaJ7tHm2e7R5tnn8Qjkx6IW5MPRcdTD0XHUw9Fx1MPRcdTL4RGVu+ERlbXSAEW10gBFtOE4t8iR9wfJQV4bN5HeGzqhhgs6oYYLOqGGCzqhhgs6oaTZ6qGk2eqhpNnqoaTZ7YE2ie2BNonu0ebZ7tHm2e7R5tnn8Qjkx6IW5MeiFuTD0XHUw9Fx1MPRcdTD0XHUx2HSRbdh0kW3YdJFt2HSRbdh0kW3YdJFu+ERlbvhEZW74RGVu+ERlbXSAEW10gBFuTFzJakxcyWpMXMlqTFzJakxcyWpQaV3yUGld8lBpXfJQaV3xOE4t8iR9wfLsVlny7FZZ8uxWWfLsVlnztHLGG7Ryxhu0csYbtHLGGlBXhs3kd4bOqGGCzqhhgs6oYYLOqGGCzqhhgs6oaTZ6qGk2eqhpNnqoaTZ7YE2ie2BNontgTaJ7tHm2e7R5tnu0ebZ5lGDeeZRg3nmUYN55lGDeeBh5ATAYeQEwGHkBM4SQbrn8Qjkx6IW5MeiFuTH0hNa99ITWv4hNETOITREziE0RMfSHHsj0XHUw9Fx1MPRcdTOEk4bPhJOGziBqqWogaqlqIGqpaiBqqWnYdJFt2HSRbdh0kW3YdJFt2HSRbvhEZW74RGVu+ERlbXSAEW5YUaFqWFGhalhRoWpYUaFqTFzJakxcyWpMXMlr3EQ9u9xEPbm0g4m2UGld8lBpXfJQaV3xOE4t8uxWWfLsVlnwpGIh8KRiIfCkYiHyeGt+Gnhrfhu0csYbtHLGGChYPhwoWD4cKFg+HChYPh38aYpJ/GmKS1Bvgs9Qb4LPUG+Cz1Bvgs2ciGa6UFeGzlBXhs3kd4bN9Idasqhhgs6oYYLOqGGCzqhhgs+MjDqyqGk2eqhpNnqoaTZ6qGk2ezRxons0caJ7NHGie2BNonu0ebZ7tHm2eFBZBnhQWQZ4UFkGeFBZBnhQWQZ5lGDeeZRg3nmUYN54="),
"format": 34896613399,
"index_count": 228,
"index_data": PackedByteArray("BQAMAAIABQAOAAwAAAAQAAkAAAALABAABwANAAQABwAPAA0AAgALAAAAAgAMAAsACQAPAAcACQAQAA8AEAAVAA8AEAAWABUADgASAAwADgAUABIACwAWABAACwARABYADwATAA0ADwAVABMADAARAAsADAASABEAEQAcABYAEQAXABwAFQAZABMAFQAbABkAEgAXABEAEgAYABcAFgAbABUAFgAcABsAFAAYABIAFAAaABgAHAAhABsAHAAiACEAGgAeABgAGgAgAB4AFwAiABwAFwAdACIAGwAfABkAGwAhAB8AGAAdABcAGAAeAB0AHQAoACIAHQAjACgAIQAlAB8AIQAnACUAHgAjAB0AHgAkACMAIgAnACEAIgAoACcAIAAkAB4AIAAmACQAOQAwADgAOQAyADAAOAAtADYAOAAwAC0AJgA1ACQAJgA3ADUAIwA5ACgAIwA0ADkAJwA2ACUAJwA4ADYAJAA0ACMAJAA1ADQAKAA4ACcAKAA5ADgANAAyADkANAApADIANAArACkANAA1ACsANwArADUANwAuACsAAQAGAAMABgAKAAgABgABAAoALwAqACwAKgAxADMAKgAvADEA"),
"lods": [0.495573, PackedByteArray("oQCyAJwAogC6ALMAugDEALUAxADRALUAxAAaAB4AGgA1AB4AGgA3ADUAqQCuAL8AqQC/AL0AxQDLAL8AsQDFAMEAywDxANUA9gDhAPEAzQD2APIAxwDOAMsAzgD1AMsAzgDWAPUA5wDjAPUA1gDmAPcA6gDmANcA0ADqANcA0ADXAM8A0ADPAMYAtADQAMYAngC0ALAAtgDGAK8AnQCvAKoApQC3AKAApgC7ALgAuwDJAMMAyQDTAMgAyQDIAMIAvgDCALkA1ADtAMgA0wDwAO0A8wDdAO0AqwC8AKcAwAAbALwAEAAcABsAzADSAMoA9ADiAN4A6ADYAOQA6QDrANkA7gDaAOwA7wDfANsArACjAJ8ApACtAKgA3ADgAOUA"), 1.08873, PackedByteArray("YgBoAGQAYwByAGkAcgB+AIUAZQBqAHQAZgBuAGEAZwB1AG8AdgB/AHAAawB5AHcAeQCOAJkAegCAAHgAgQB9AHEAgQA2AH0AgQCaAJIAbACDAHsAcwCEAG0AfACYAIIAkACLAJgAHgA0ABcAGgA3AB4AhgCVAI8AmwCJAJMAlACKAIcAkQCWAIwAlwCIAI0A"), 1.59048, PackedByteArray("PABCADoAOwBEAD0ACQA3ADYANwAyADYAQwBAAD4ARQA/AEEA")],
"material": SubResource("StandardMaterial3D_tfjwx"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 248,
"vertex_data": PackedByteArray("CEj+/wAA2v8ISP7/AAAP7gAA/v/IYUvPAAD+/8hh7O+DG/7///8co4Mb/v///3ypgxv+////Hd+NdP7///9xo410/v////2wEZD+/8hhNc8RkP7/yGFezbZB89ooFwf/NAeA2e9oYMyNHQ7aQu0/mo0dDtpC7X2a32XY20Lt15g4fGbc72juzMB0DarwAzP/cDn9qLhVI80YUGWpC9rDmhhQZakL2qybaZm2qgvajpkRsB6ruFV/zZrDRoXLKbP+7pD5hLJuXM1JpBaFL96pmEmkFoUv3rCZ7OJ1hS/eoppH9pKFsm5RzArRW2rmNMH+FqIHa0Z1Ec0FtMZqcN2vmAW0xmpw3YOYD+7xaXDdpZr//69pRnVbzN6vqE0IPOX+9oZZTlV0ac2WlhVObc/rmZaWFU5tz5OZJsk6TW3PqZvG2PdMVXTOzNPMKgGyT+b708wqAbJPbuaNrwAAaHqz1I2vAABoeo/gvLpxAIS/hqO8unEAhL95s7y6cQCEvw636t7iAYS/QaPq3uIBhL9koxnqVAJoervMGepUAmh6ZMofZ30yCDyL/AE9bDJVdObLEE1xMm3PPJwQTXEybc8bnDiBiTJtz4iWU5GNMlV0H86DG/7////hkIMb/v///468EZD+/8hhw7sRkP7/yGH//7y6cQCEv+aXvLpxAIS/4r8Z6lQCaHrIxhnqVAJoev//EE1xMm3PhJgQTXEybc/dmBBNcTJtz4i6EE1xMm3P176DG/7///+7mYMb/v///zu+EZD+/8hh//8RkP7/yGF1wxGQ/v/IYUO5EZD+/8hhzOeNHQ7aQu26mo0dDtpC7caUjR0O2kLtycWNHQ7aQu3//0mkFoUv3heVSaQWhS/e//+8unEAhL/FmLy6cQCEv7XDGepUAmh6hsYZ6lQCaHq/wRnqVAJoev//GepUAmh6//8fZ30yCDy+2B9nfTIIPP//H2d9Mgg8X98fZ30yCDxp7BBNcTJtz2/REE1xMm3Pwp4QTXEybc/1rBBNcTJtz+O4EE1xMm3PQMODG/7////ym4Mb/v///0TLgxv+////LqgRkP7/yGH//xGQ/v/IYUPYEZD+/8hh68IRkP7/yGFgwzQHgNnvaFXWNAeA2e9onL80B4DZ72hd7jQHgNnvaMfcNAeA2e9oV9Y0B4DZ72h6wo0dDtpC7WGbjR0O2kLthLyNHQ7aQu0alY0dDtpC7SSTjR0O2kLtDJ2NHQ7aQu2Cpjh8ZtzvaMPVOHxm3O9oo8I4fGbc72hatjh8ZtzvaJncOHxm3O9oO8uaw0aFyylX+5rDRoXLKXrcmsNGhcsp3vKaw0aFyykv50mkFoUv3kqTSaQWhS/ew5ns4nWFL96nmezidYUv3q+u7OJ1hS/eKZPs4nWFL96UtBaiB2tGdQbVFqIHa0Z1gsAWogdrRnX2uBaiB2tGdRfNvLpxAIS/MJu8unEAhL+SyhnqVAJoel++GepUAmh67MEZ6lQCaHpc1BnqVAJoev//GepUAmh6//8fZ30yCDz1+h9nfTIIPIvgH2d9Mgg8wfAfZ30yCDzj5xBNcTJtz5eUEE1xMm3PkpwQTXEybc+emxBNcTJtz/i0EE1xMm3PAbkQTXEybc/bz1ORjTJVdL/UU5GNMlV00dxTkY0yVXQO3lORjTJVdGvAAAD+/8hhxMkAAP7/yGFe4gAA/v/IYf3SAAD+/8hh6NODG/7///9em4Mb/v///0Swgxv+////16eDG/7///8r4YMb/v///xPVjXT+////ipyNdP7///+Klo10/v///82kjXT+////GrcRkP7/yGGNzRGQ/v/IYeriEZD+/8hhC8MRkP7/yGFj1BGQ/v/IYSPHtkHz2igX9ei2QfPaKBcz/LZB89ooF5bttkHz2igXl+80B4DZ72iWxjQHgNnvaLbANAeA2e9oydI0B4DZ72jUvzQHgNnvaHbYjR0O2kLtBZqNHQ7aQu3Ik40dDtpC7XuVjR0O2kLt+5/fZdjbQu0vlN9l2NtC7aGg32XY20Lt/azfZdjbQu2XkTh8ZtzvaLHNOHxm3O9oXcI4fGbc72g31xhQZakL2mCVGFBlqQvaZ5MYUGWpC9q8oJrDRoXLKazqmsNGhcspdPWaw0aFyym190mkFoUv3pqS7OJ1hS/eGJTs4nWFL954oUf2koWybrbRR/aShbJu4bxH9pKFsm6kwgrRW2rmNFbzCtFbauY0L/QWogdrRnV51haiB2tGde/AD+7xaXDd5aEP7vFpcN2Fkw/u8Wlw3YiUD+7xaXDdG67er6hNCDwY+N6vqE0IPOryja8AAGh6JeWNrwAAaHqb142vAABoekXIja8AAGh6TMmNrwAAaHpP0ry6cQCEv++SvLpxAIS//Ze8unEAhL9Msby6cQCEv/rFGepUAmh6DcgZ6lQCaHonwBnqVAJoeuvRGepUAmh6Xt4Z6lQCaHrtzx9nfTIIPAj8H2d9Mgg8YO8fZ30yCDx9/B9nfTIIPKTvAT1sMlV0l9UBPWwyVXR10wE9bDJVdGXGEE1xMm3PxpUQTXEybc/rqhBNcTJtz6mlOIGJMm3PRZA4gYkybc/PrjiBiTJtz1SlOIGJMm3PspI4gYkybc/xmVORjTJVdArXU5GNMlV0GsZTkY0yVXQe3ExgpwB9yNE2o5Sx0YPrmjxaz6+7N6RKtFjv0SJex4I5gMz6F0StdhMWr4caN31t/c95Vf0EdcXwwGzS+8p+cACCghECdnWC9opvjPe4ZNbyNF3L+Aea0gh8juwJV4drCfxwEvp4aY30q162+/CTxAk9i/EI130fA9+DQf1JfDDvEoP3/lh9KQ9pflMFDHWQC26Kve4mhhXdyYdo3xN1zyQwdfESK4tLKCQydVTlRGzl7D4ja8Ak+6H5J13ctUeqdshJGjVgUBY3wnaiHv1RdiirgrL9pIKu/cV98vKVg7n9+3yNDE99xgRo2ori4Wqe37WQQQVFqwEBPSNRmJk2/uRVeBs9Vl70Y/CioapySI7PrF/t7Fk4v84e5mOxXKFdugzb6xfKtwEOZZbbBJk5RQsaudarxpxRwaiypblyjq/mH7g86oqGY+49F6SLcjyn6yJ8OxXEd7E0iWRHYfBa02jIbq3sZJY0C8ap+CTak57xSC6yNjcmybk6iTr0Uk0h36E5MdEL7y+nF6hbsZaLndGG2X0Vi6D5Cyu1dg/boSMNZI+U2A+GOO6bezS6B37w/0Zxe/qactv6u72Zo7nHCnIcgt/YWHM96/eR2vfyZnv0kJfACV2UsQivgjcE4YjmAcqKggUpjG0MjI+iDzByxvFblD8VGW+H+8Bc0fkyjv4ETZgUDj6X4wHUeaQC2HEI/L9vLv37lqD+qoa89MojE5w5L0vgT30/HAF3nDSae7QTeF18Z0Bnflk1dgMKT30h/AeFmgHOmDrslX3V6xUU/KkOOBXFY5BM6HBNQ9+KMN7JSHorDbF+pAShgC4Ej3i1FICSOdYgkZHE7Is45aPdcTb71Hm9xpq7wuqVasUy5gkgztfnE2Pd/klOtvoupr3vMZbVmiIOnhINhruOD9GrxQ8hyYkkG7+pHs9zrg1MeyL49nKp8XWDugMvjoPcDIg16ZKAe/6xcfH68HiZ/ZevP7oQnMbPtW9p61OVpfBEnKcU5aB0GKqnhBypbHIYd5DNB5aCVgLJiUAENGQM9Tpf2P10Ya/5/o0IDhVx5PB1jTkOqYx0/0iR4gR2jzQHmoQTB8aIXgssgqcMEn1RA+qFofmqgyn/9G7B/HaKBRAngvkTSo7OLbV7xg0WbcsSr5b36Ao/ferhWNLualoM7tFHJOksRJViUjV9pYErUmZyM73lEz4XdI58gxPdeKomfnoCFsVzATSRSiZFm4Id/diFjwLK9wr8uY259oeE2PYKbXH5gmbs9t90Z+lRVR/iYD27z25y9B6Ibd8dinLvFi1U80G6XZcxJHpoDoZ5wQ4yfqUF")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_qjl7b")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lx2jg"]
albedo_color = Color(0.988475, 0.962867, 0.959293, 1)
emission_enabled = true
emission = Color(0.44, 0.44, 0.44, 1)

[sub_resource type="SphereMesh" id="SphereMesh_iiqii"]
material = SubResource("StandardMaterial3D_lx2jg")
radius = 0.02
height = 0.05

[sub_resource type="CylinderShape3D" id="CylinderShape3D_132ne"]
height = 0.535
radius = 0.125

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lqgi6"]

[sub_resource type="ArrayMesh" id="ArrayMesh_28bwy"]
_surfaces = [{
"aabb": AABB(-1.52462, -13.4093, -0.79778, 2.73177, 27.0841, 1.46214),
"format": 34896613377,
"index_count": 228,
"index_data": PackedByteArray("AgAGAAEAAgAHAAYAAAAJAAQAAAAFAAkAAwAHAAIAAwAIAAcAAQAFAAAAAQAGAAUABAAIAAMABAAJAAgACQANAAgACQAOAA0ABwALAAYABwAMAAsABQAOAAkABQAKAA4ACAAMAAcACAANAAwABgAKAAUABgALAAoACgATAA4ACgAPABMADQARAAwADQASABEACwAPAAoACwAQAA8ADgASAA0ADgATABIADAAQAAsADAARABAAEwAXABIAEwAYABcAEQAVABAAEQAWABUADwAYABMADwAUABgAEgAWABEAEgAXABYAEAAUAA8AEAAVABQAFAAdABgAFAAZAB0AFwAbABYAFwAcABsAFQAZABQAFQAaABkAGAAcABcAGAAdABwAFgAaABUAFgAbABoAJwAhACYAJwAiACEAJgAgACUAJgAhACAAGwAkABoAGwAlACQAGQAnAB0AGQAjACcAHAAlABsAHAAmACUAGgAjABkAGgAkACMAHQAmABwAHQAnACYAIwAiACcAIwAeACIAIwAfAB4AIwAkAB8AJQAfACQAJQAgAB8AAAACAAEAAgAEAAMAAgAAAAQAIAAeAB8AHgAhACIAHgAgACEA"),
"lods": [0.495573, PackedByteArray("AgAGAAEAAgAHAAYABwAMAAYADAAVAAYADAARABUAEQAkABUAEQAlACQABAAFAAkABAAJAAgADwATAAkABQAPAAkAEwAmABcAJwAiACYAEwAnACYADwAUABMAFAAnABMAFAAZACcAIwAiACcAGQAjACcAJAAjABkAFQAkABkAFQAZABQAFQAUAA8ABgAVAA8AAQAGAAUABgAPAAUAAQAFAAQAAwAHAAIAAwAIAAcACAASAAwAEgAXABEAEgARAAwACAAMAAcAFwAlABEAFwAmACUAJgAgACUABAAIAAMACQASAAgACQATABIAEwAXABIAJgAiACAAIwAfACIAIwAkAB8AJQAfACQAJQAgAB8ABAACAAEAAgAEAAMAHwAgACIA"), 1.08873, PackedByteArray("AgAGAAQAAgAHAAYABwARABUABAAGAAkABAAHAAIABAAJAAcACQASAAcABgAPAAkADwAjACcADwASAAkAEgARAAcAEgAlABEAEgAnACUABgAVAA8ABwAVAAYADwAnABIAIwAiACcAFQAjAA8AEQAlABUAFQAlACMAJwAiACUAJQAiACAAIwAlACIAJQAgACIA"), 1.59048, PackedByteArray("BAAlAAIAAgAlAAQABAAlACUAJQAiACUAJQAiACAAJQAgACIA")],
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 40,
"vertex_data": PackedByteArray("CEj+/wAAAAAAAP7/yGEAAIMb/v///wAAjXT+////AAARkP7/yGEAALZB89ooFwAANAeA2e9oAACNHQ7aQu0AAN9l2NtC7QAAOHxm3O9oAADAdA2q8AMAAHA5/ai4VQAAGFBlqQvaAABpmbaqC9oAABGwHqu4VQAAmsNGhcspAADukPmEsm4AAEmkFoUv3gAA7OJ1hS/eAABH9pKFsm4AAArRW2rmNAAAFqIHa0Z1AAAFtMZqcN0AAA/u8Wlw3QAA//+vaUZ1AADer6hNCDwAAPaGWU5VdAAAlpYVTm3PAAAmyTpNbc8AAMbY90xVdAAA08wqAbJPAACNrwAAaHoAALy6cQCEvwAA6t7iAYS/AAAZ6lQCaHoAAB9nfTIIPAAAAT1sMlV0AAAQTXEybc8AADiBiTJtzwAAU5GNMlV0AAA=")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_6obkc"]
resource_name = "stick1_Circle_001"
_surfaces = [{
"aabb": AABB(-1.52462, -13.4093, -0.79778, 2.73177, 27.0841, 1.46214),
"attribute_data": PackedByteArray("mRojTPom/rAGHkBM4SQbrn8Qjkx6IW5MfSE1r+ITREx9IceyPRcdTOEk4bOIGqpadh0kW74RGVtdIARblhRoWpMXMlq1GsVtjR3UbfcRD25tIOJt5RThbdMXxm2UGld8EB1DfE4Ti3yJH3B8uxWWfCkYiHyeGt+G7RyxhrsT5IZDH9OGChYPh1MYGId/GmKSoxxvkk8UZ5LIHm6SYxZYkm4YVZIyGpiz4yOdrdQb4LNnIhmulBXhs3kd4bN9IdasIBeCs2cik6uqGGCz4yMOrKoaTZ7NHGie2BNonu0ebZ4UFkGeZRg3nn8Qjkx6IW5MPRcdTD0XHUyUFeGzeR3hs6oYYLOqGGCz2BNontgTaJ7tHm2e7R5tnn8Qjkx6IW5MPRcdTD0XHUw9Fx1MPRcdTL4RGVu+ERlbXSAEW10gBFtOE4t8iR9wfJQV4bN5HeGzqhhgs6oYYLOqGGCzqhhgs6oaTZ6qGk2eqhpNnqoaTZ7YE2ie2BNonu0ebZ7tHm2e7R5tnn8Qjkx6IW5MeiFuTD0XHUw9Fx1MPRcdTD0XHUx2HSRbdh0kW3YdJFt2HSRbdh0kW3YdJFu+ERlbvhEZW74RGVu+ERlbXSAEW10gBFuTFzJakxcyWpMXMlqTFzJakxcyWpQaV3yUGld8lBpXfJQaV3xOE4t8iR9wfLsVlny7FZZ8uxWWfLsVlnztHLGG7Ryxhu0csYbtHLGGlBXhs3kd4bOqGGCzqhhgs6oYYLOqGGCzqhhgs6oaTZ6qGk2eqhpNnqoaTZ7YE2ie2BNontgTaJ7tHm2e7R5tnu0ebZ5lGDeeZRg3nmUYN55lGDeeBh5ATAYeQEwGHkBM4SQbrn8Qjkx6IW5MeiFuTH0hNa99ITWv4hNETOITREziE0RMfSHHsj0XHUw9Fx1MPRcdTOEk4bPhJOGziBqqWogaqlqIGqpaiBqqWnYdJFt2HSRbdh0kW3YdJFt2HSRbvhEZW74RGVu+ERlbXSAEW5YUaFqWFGhalhRoWpYUaFqTFzJakxcyWpMXMlr3EQ9u9xEPbm0g4m2UGld8lBpXfJQaV3xOE4t8uxWWfLsVlnwpGIh8KRiIfCkYiHyeGt+Gnhrfhu0csYbtHLGGChYPhwoWD4cKFg+HChYPh38aYpJ/GmKS1Bvgs9Qb4LPUG+Cz1Bvgs2ciGa6UFeGzlBXhs3kd4bN9Idasqhhgs6oYYLOqGGCzqhhgs+MjDqyqGk2eqhpNnqoaTZ6qGk2ezRxons0caJ7NHGie2BNonu0ebZ7tHm2eFBZBnhQWQZ4UFkGeFBZBnhQWQZ5lGDeeZRg3nmUYN54="),
"format": 34896613399,
"index_count": 228,
"index_data": PackedByteArray("BQAMAAIABQAOAAwAAAAQAAkAAAALABAABwANAAQABwAPAA0AAgALAAAAAgAMAAsACQAPAAcACQAQAA8AEAAVAA8AEAAWABUADgASAAwADgAUABIACwAWABAACwARABYADwATAA0ADwAVABMADAARAAsADAASABEAEQAcABYAEQAXABwAFQAZABMAFQAbABkAEgAXABEAEgAYABcAFgAbABUAFgAcABsAFAAYABIAFAAaABgAHAAhABsAHAAiACEAGgAeABgAGgAgAB4AFwAiABwAFwAdACIAGwAfABkAGwAhAB8AGAAdABcAGAAeAB0AHQAoACIAHQAjACgAIQAlAB8AIQAnACUAHgAjAB0AHgAkACMAIgAnACEAIgAoACcAIAAkAB4AIAAmACQAOQAwADgAOQAyADAAOAAtADYAOAAwAC0AJgA1ACQAJgA3ADUAIwA5ACgAIwA0ADkAJwA2ACUAJwA4ADYAJAA0ACMAJAA1ADQAKAA4ACcAKAA5ADgANAAyADkANAApADIANAArACkANAA1ACsANwArADUANwAuACsAAQAGAAMABgAKAAgABgABAAoALwAqACwAKgAxADMAKgAvADEA"),
"lods": [0.495573, PackedByteArray("oQCyAJwAogC6ALMAugDEALUAxADRALUAxAAaAB4AGgA1AB4AGgA3ADUAqQCuAL8AqQC/AL0AxQDLAL8AsQDFAMEAywDxANUA9gDhAPEAzQD2APIAxwDOAMsAzgD1AMsAzgDWAPUA5wDjAPUA1gDmAPcA6gDmANcA0ADqANcA0ADXAM8A0ADPAMYAtADQAMYAngC0ALAAtgDGAK8AnQCvAKoApQC3AKAApgC7ALgAuwDJAMMAyQDTAMgAyQDIAMIAvgDCALkA1ADtAMgA0wDwAO0A8wDdAO0AqwC8AKcAwAAbALwAEAAcABsAzADSAMoA9ADiAN4A6ADYAOQA6QDrANkA7gDaAOwA7wDfANsArACjAJ8ApACtAKgA3ADgAOUA"), 1.08873, PackedByteArray("YgBoAGQAYwByAGkAcgB+AIUAZQBqAHQAZgBuAGEAZwB1AG8AdgB/AHAAawB5AHcAeQCOAJkAegCAAHgAgQB9AHEAgQA2AH0AgQCaAJIAbACDAHsAcwCEAG0AfACYAIIAkACLAJgAHgA0ABcAGgA3AB4AhgCVAI8AmwCJAJMAlACKAIcAkQCWAIwAlwCIAI0A"), 1.59048, PackedByteArray("PABCADoAOwBEAD0ACQA3ADYANwAyADYAQwBAAD4ARQA/AEEA")],
"material": SubResource("StandardMaterial3D_lqgi6"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 248,
"vertex_data": PackedByteArray("CEj+/wAA2v8ISP7/AAAP7gAA/v/IYUvPAAD+/8hh7O+DG/7///8co4Mb/v///3ypgxv+////Hd+NdP7///9xo410/v////2wEZD+/8hhNc8RkP7/yGFezbZB89ooFwf/NAeA2e9oYMyNHQ7aQu0/mo0dDtpC7X2a32XY20Lt15g4fGbc72juzMB0DarwAzP/cDn9qLhVI80YUGWpC9rDmhhQZakL2qybaZm2qgvajpkRsB6ruFV/zZrDRoXLKbP+7pD5hLJuXM1JpBaFL96pmEmkFoUv3rCZ7OJ1hS/eoppH9pKFsm5RzArRW2rmNMH+FqIHa0Z1Ec0FtMZqcN2vmAW0xmpw3YOYD+7xaXDdpZr//69pRnVbzN6vqE0IPOX+9oZZTlV0ac2WlhVObc/rmZaWFU5tz5OZJsk6TW3PqZvG2PdMVXTOzNPMKgGyT+b708wqAbJPbuaNrwAAaHqz1I2vAABoeo/gvLpxAIS/hqO8unEAhL95s7y6cQCEvw636t7iAYS/QaPq3uIBhL9koxnqVAJoervMGepUAmh6ZMofZ30yCDyL/AE9bDJVdObLEE1xMm3PPJwQTXEybc8bnDiBiTJtz4iWU5GNMlV0H86DG/7////hkIMb/v///468EZD+/8hhw7sRkP7/yGH//7y6cQCEv+aXvLpxAIS/4r8Z6lQCaHrIxhnqVAJoev//EE1xMm3PhJgQTXEybc/dmBBNcTJtz4i6EE1xMm3P176DG/7///+7mYMb/v///zu+EZD+/8hh//8RkP7/yGF1wxGQ/v/IYUO5EZD+/8hhzOeNHQ7aQu26mo0dDtpC7caUjR0O2kLtycWNHQ7aQu3//0mkFoUv3heVSaQWhS/e//+8unEAhL/FmLy6cQCEv7XDGepUAmh6hsYZ6lQCaHq/wRnqVAJoev//GepUAmh6//8fZ30yCDy+2B9nfTIIPP//H2d9Mgg8X98fZ30yCDxp7BBNcTJtz2/REE1xMm3Pwp4QTXEybc/1rBBNcTJtz+O4EE1xMm3PQMODG/7////ym4Mb/v///0TLgxv+////LqgRkP7/yGH//xGQ/v/IYUPYEZD+/8hh68IRkP7/yGFgwzQHgNnvaFXWNAeA2e9onL80B4DZ72hd7jQHgNnvaMfcNAeA2e9oV9Y0B4DZ72h6wo0dDtpC7WGbjR0O2kLthLyNHQ7aQu0alY0dDtpC7SSTjR0O2kLtDJ2NHQ7aQu2Cpjh8ZtzvaMPVOHxm3O9oo8I4fGbc72hatjh8ZtzvaJncOHxm3O9oO8uaw0aFyylX+5rDRoXLKXrcmsNGhcsp3vKaw0aFyykv50mkFoUv3kqTSaQWhS/ew5ns4nWFL96nmezidYUv3q+u7OJ1hS/eKZPs4nWFL96UtBaiB2tGdQbVFqIHa0Z1gsAWogdrRnX2uBaiB2tGdRfNvLpxAIS/MJu8unEAhL+SyhnqVAJoel++GepUAmh67MEZ6lQCaHpc1BnqVAJoev//GepUAmh6//8fZ30yCDz1+h9nfTIIPIvgH2d9Mgg8wfAfZ30yCDzj5xBNcTJtz5eUEE1xMm3PkpwQTXEybc+emxBNcTJtz/i0EE1xMm3PAbkQTXEybc/bz1ORjTJVdL/UU5GNMlV00dxTkY0yVXQO3lORjTJVdGvAAAD+/8hhxMkAAP7/yGFe4gAA/v/IYf3SAAD+/8hh6NODG/7///9em4Mb/v///0Swgxv+////16eDG/7///8r4YMb/v///xPVjXT+////ipyNdP7///+Klo10/v///82kjXT+////GrcRkP7/yGGNzRGQ/v/IYeriEZD+/8hhC8MRkP7/yGFj1BGQ/v/IYSPHtkHz2igX9ei2QfPaKBcz/LZB89ooF5bttkHz2igXl+80B4DZ72iWxjQHgNnvaLbANAeA2e9oydI0B4DZ72jUvzQHgNnvaHbYjR0O2kLtBZqNHQ7aQu3Ik40dDtpC7XuVjR0O2kLt+5/fZdjbQu0vlN9l2NtC7aGg32XY20Lt/azfZdjbQu2XkTh8ZtzvaLHNOHxm3O9oXcI4fGbc72g31xhQZakL2mCVGFBlqQvaZ5MYUGWpC9q8oJrDRoXLKazqmsNGhcspdPWaw0aFyym190mkFoUv3pqS7OJ1hS/eGJTs4nWFL954oUf2koWybrbRR/aShbJu4bxH9pKFsm6kwgrRW2rmNFbzCtFbauY0L/QWogdrRnV51haiB2tGde/AD+7xaXDd5aEP7vFpcN2Fkw/u8Wlw3YiUD+7xaXDdG67er6hNCDwY+N6vqE0IPOryja8AAGh6JeWNrwAAaHqb142vAABoekXIja8AAGh6TMmNrwAAaHpP0ry6cQCEv++SvLpxAIS//Ze8unEAhL9Msby6cQCEv/rFGepUAmh6DcgZ6lQCaHonwBnqVAJoeuvRGepUAmh6Xt4Z6lQCaHrtzx9nfTIIPAj8H2d9Mgg8YO8fZ30yCDx9/B9nfTIIPKTvAT1sMlV0l9UBPWwyVXR10wE9bDJVdGXGEE1xMm3PxpUQTXEybc/rqhBNcTJtz6mlOIGJMm3PRZA4gYkybc/PrjiBiTJtz1SlOIGJMm3PspI4gYkybc/xmVORjTJVdArXU5GNMlV0GsZTkY0yVXQe3ExgpwB9yNE2o5Sx0YPrmjxaz6+7N6RKtFjv0SJex4I5gMz6F0StdhMWr4caN31t/c95Vf0EdcXwwGzS+8p+cACCghECdnWC9opvjPe4ZNbyNF3L+Aea0gh8juwJV4drCfxwEvp4aY30q162+/CTxAk9i/EI130fA9+DQf1JfDDvEoP3/lh9KQ9pflMFDHWQC26Kve4mhhXdyYdo3xN1zyQwdfESK4tLKCQydVTlRGzl7D4ja8Ak+6H5J13ctUeqdshJGjVgUBY3wnaiHv1RdiirgrL9pIKu/cV98vKVg7n9+3yNDE99xgRo2ori4Wqe37WQQQVFqwEBPSNRmJk2/uRVeBs9Vl70Y/CioapySI7PrF/t7Fk4v84e5mOxXKFdugzb6xfKtwEOZZbbBJk5RQsaudarxpxRwaiypblyjq/mH7g86oqGY+49F6SLcjyn6yJ8OxXEd7E0iWRHYfBa02jIbq3sZJY0C8ap+CTak57xSC6yNjcmybk6iTr0Uk0h36E5MdEL7y+nF6hbsZaLndGG2X0Vi6D5Cyu1dg/boSMNZI+U2A+GOO6bezS6B37w/0Zxe/qactv6u72Zo7nHCnIcgt/YWHM96/eR2vfyZnv0kJfACV2UsQivgjcE4YjmAcqKggUpjG0MjI+iDzByxvFblD8VGW+H+8Bc0fkyjv4ETZgUDj6X4wHUeaQC2HEI/L9vLv37lqD+qoa89MojE5w5L0vgT30/HAF3nDSae7QTeF18Z0Bnflk1dgMKT30h/AeFmgHOmDrslX3V6xUU/KkOOBXFY5BM6HBNQ9+KMN7JSHorDbF+pAShgC4Ej3i1FICSOdYgkZHE7Is45aPdcTb71Hm9xpq7wuqVasUy5gkgztfnE2Pd/klOtvoupr3vMZbVmiIOnhINhruOD9GrxQ8hyYkkG7+pHs9zrg1MeyL49nKp8XWDugMvjoPcDIg16ZKAe/6xcfH68HiZ/ZevP7oQnMbPtW9p61OVpfBEnKcU5aB0GKqnhBypbHIYd5DNB5aCVgLJiUAENGQM9Tpf2P10Ya/5/o0IDhVx5PB1jTkOqYx0/0iR4gR2jzQHmoQTB8aIXgssgqcMEn1RA+qFofmqgyn/9G7B/HaKBRAngvkTSo7OLbV7xg0WbcsSr5b36Ao/ferhWNLualoM7tFHJOksRJViUjV9pYErUmZyM73lEz4XdI58gxPdeKomfnoCFsVzATSRSiZFm4Id/diFjwLK9wr8uY259oeE2PYKbXH5gmbs9t90Z+lRVR/iYD27z25y9B6Ibd8dinLvFi1U80G6XZcxJHpoDoZ5wQ4yfqUF")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_28bwy")

[node name="StickThrow" type="RigidBody3D" groups=["highlight", "pick_item", "stick"]]
collision_layer = 3
axis_lock_angular_x = true
axis_lock_angular_y = true
gravity_scale = 0.0
script = ExtResource("1_bc3on")

[node name="StickMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(-1.57452e-09, -0.140328, 0, 0.0360208, -6.13395e-09, 0, 0, 0, 0.0360208, 0, 0, 0)
visible = false
mesh = SubResource("CylinderMesh_k6x6n")

[node name="MyCollision" type="CollisionShape3D" parent="." groups=["highlight", "left_click_prompt"]]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("CylinderShape3D_hj2go")

[node name="StickFallForest" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_o0lkw")
volume_db = -5.0

[node name="stick1" type="MeshInstance3D" parent="."]
transform = Transform3D(-5.27367e-10, 0.0120647, -5.27367e-10, 0, -5.27367e-10, -0.0120647, -0.0120647, -5.27367e-10, 2.30519e-17, -0.0013738, -0.00500849, -0.00610138)
visible = false
mesh = SubResource("ArrayMesh_ussip")
skeleton = NodePath("")
surface_material_override/0 = ExtResource("3_eqvu3")

[node name="CPUParticles3D" type="CPUParticles3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -0.033539, -0.999437, 0, 0.999437, -0.033539, -0.0846825, -0.0075555, -0.00697387)
visible = false
amount = 4
lifetime = 0.2
preprocess = 2.0
speed_scale = 0.08
fixed_fps = 30
visibility_aabb = AABB(-4, -4, -4, 8, 8, 8)
mesh = SubResource("SphereMesh_iiqii")
emission_shape = 5
emission_points = PackedVector3Array()
emission_normals = PackedVector3Array()
direction = Vector3(0, -1, 0)
gravity = Vector3(0, 5, 0)
scale_amount_min = 0.15
scale_amount_max = 0.5

[node name="CPUParticles3D2" type="CPUParticles3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -0.033539, -0.999437, 0, 0.999437, -0.033539, 0.0900383, -0.0075555, -0.00697387)
visible = false
amount = 4
lifetime = 0.2
preprocess = 2.0
speed_scale = 0.08
fixed_fps = 30
visibility_aabb = AABB(-4, -4, -4, 8, 8, 8)
mesh = SubResource("SphereMesh_iiqii")
emission_shape = 5
emission_points = PackedVector3Array()
emission_normals = PackedVector3Array()
direction = Vector3(0, -1, 0)
gravity = Vector3(0, 5, 0)
scale_amount_min = 0.15
scale_amount_max = 0.5

[node name="DropArea" type="Area3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="DropArea"]
shape = SubResource("CylinderShape3D_132ne")

[node name="stick2" type="MeshInstance3D" parent="."]
transform = Transform3D(-7.17834e-10, 0.0164221, -7.17834e-10, 0, -7.17834e-10, -0.0164221, -0.0164221, -7.17834e-10, 3.13775e-17, 0.0153035, -0.00412549, -0.0102968)
mesh = SubResource("ArrayMesh_6obkc")
skeleton = NodePath("")
surface_material_override/0 = ExtResource("4_owufi")

[connection signal="body_entered" from="DropArea" to="." method="_on_drop_area_body_entered"]
